# colors

./: .gitignore  pyproject.toml
EmojiStories/: README.rst  encoding.py  file_utils.py
