[tool.poetry]
name = "colors"
version = "0.1.0"
description = "Experiment on image colorization from drawing"
authors = ["Juliette <bourquinjuliette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^2.3.1"
matplotlib = "^3.3.2"
glob = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
